Added:  CSRF protection for cookie-auth APIs (token middleware or strict same-site + custom header check). Rate-limit /auth/login, /auth/register, /auth/password/forgot per IP and maybe per account. Revoke sessions server-side on logout (set revoked=true in DB) and add periodic cleanup of expired sessions/tokens. Add request validation schemas on write endpoints (products, content, gallery, media, blogs). Add upload constraints (max size, image re-encode/strip EXIF, virus scan if possible) and move uploads to durable storage. Review icon-only buttons for aria-label; ensure focus outlines remain visible with new theming. Keep DOMPurify dependency patched and lock versions before deploy.

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -36,7 +36,8 @@
     "error": "Error",
     "delete": "Delete",
     "cancel": "Cancel",
-    "noComments": "No comments yet. Be the first to share your thoughts!"
+    "noComments": "No comments yet. Be the first to share your thoughts!",
+    "fullStory": "Read Our Full Story"
   },
   "contact": {
     "title": "Get in Touch",
@@ -70,6 +71,7 @@
     "privacy": "Privacy",
     "terms": "Terms",
     "adminRequired": "Admin access required.",
+    "loginRequired": "You need to login to access this feature.",
     "signed_out": "You have been signed out",
     "password": "Password",
     "hide": "hide",
@@ -257,7 +259,19 @@
     "empty": "No photos found.",
     "unlike": "Unlike",
     "like": "Like",
-    "uploadSize": "JPG, PNG (MAX. 5MB)"
+    "disnName": "Dish Name",
+    "disnPlaceholder": "e.g. Qabili Palau",
+    "dishDescription": "Description (Optional)",
+    "uploadSize": "JPG, PNG (MAX. 5MB)",
+    "toast": {
+      "under5mb": "Please choose an image under 5MB",
+      "no_image": "Please chose an image.",
+      "no_name": "Dish name is required",
+      "submitted": "Photo submitted. It will appear after approval.",
+      "guests_only": "This section is available to guest users only",
+      "submission_deleted": "Submission deleted.",
+      "submission_delete_failed": "Failed to delete submission."
+    }
   },
   "newsletter": {
     "title": "Join the Rayhana Family",
@@ -377,7 +391,28 @@
   "footer": {
     "rights": "© 2026 Rayhana Kitchen Appliance. All rights reserved."
   },
+  "dashboard": {
+    "comments": {
+      "title": "Comment Moderation",
+      "subtitle": "Review and manage blog comments",
+      "count": "{{count}} comment(s)",
+      "updated": "Comment updated.",
+      "update_failed": "Failed to update comment.",
+      "deleted": "Comment deleted.",
+      "delete_failed": "Failed to delete comment.",
+      "approve_failed": "Failed to approve comment.",
+      "approved": "Comment approved.",
+      "delete_title": "Delete this comment?",
+      "delete_body": "This will permanently remove the comment from the blog.",
+      "empty": "No comments yet.",
+      "pending": "Pending",
+      "blog": "Blog",
+      "approve": "Approve"
+    }
+  },
   "comments": {
+    "cancel": "Cancel",
+    "save": "Save Changes",
     "message": "Comment",
     "signedIn": "You are signed in",
     "title": "Comments",
