--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -36,7 +36,8 @@
     "error": "تېروتنه",
     "delete": "حذف",
     "cancel": "لغوه",
-    "noComments": "تر اوسه کوم نظر نشته. تاسو لومړی کس اوسئ چې خپل نظر شریکوئ!"
+    "noComments": "تر اوسه کوم نظر نشته. تاسو لومړی کس اوسئ چې خپل نظر شریکوئ!",
+    "fullStory": "زموږ بشپړه کیسه ولولئ"
   },
   "confirm": {
     "title": "یقیني یاست؟",
@@ -61,6 +62,7 @@
     "privacy": "محرمیت",
     "terms": "شرایط",
     "adminRequired": "د مدیر لاسرسی اړین دی.",
+    "loginRequired": "د دې برخې ته د لاسرسي لپاره باید خپل حساب ته ننوتل وکړئ.",
     "signed_out": "تاسو له خپل حساب څخه ووتلئ",
     "password": "پټنوم",
     "hide": "پټول",
@@ -257,7 +259,19 @@
     "empty": "هیڅ عکس ونه موندل شو.",
     "unlike": "نه خوښول",
     "like": "په څېر",
-    "uploadSize": "JPG, PNG (اعظمي ۵MB)"
+    "dishName": "د خوړو نوم",
+    "dishPlaceholder": "لکه قابلي پلو",
+    "dishDescription": "تشریح (اختیاري)",
+    "uploadSize": "JPG, PNG (اعظمي ۵MB)",
+    "toast": {
+      "under5mb": "مهرباني وکړئ د ۵MB څخه کم انځور وټاکئ",
+      "no_image": "مهرباني وکړئ یو انځور وټاکئ.",
+      "no_name": "د خوړو نوم ضروري دی",
+      "submitted": "انځور واستول شو. له تایید وروسته به ښکاره شي.",
+      "guests_only": "دا برخه یوازې د مېلمنو کاروونکو لپاره شتون لري",
+      "submission_deleted": "لېږنه په بریالیتوب سره حذف شوه.",
+      "submission_delete_failed": "د لېږنې حذف ناکام شو."
+    }
   },
   "newsletter": {
     "title": "د ریحانه کورنۍ سره یوځای شئ",
@@ -358,7 +372,9 @@
     "signInToComment": "د تبصرې کولو لپاره باید ننوتل شوی یاست.",
     "success": "تبصره په بریالیتوب سره واستول شوه!",
     "pending_approval": "ستاسو نظر د ارزونې لپاره واستول شو او له تایید وروسته به ښکاره شي.",
-    "comment_submit_failed": "د نظر استول ناکام شول. مهرباني وکړئ بیا هڅه وکړئ."
+    "comment_submit_failed": "د نظر استول ناکام شول. مهرباني وکړئ بیا هڅه وکړئ.",
+    "cancel": "لغوه",
+    "save": "بدلونونه خوندي کړئ"
   },
   "privacy": {
     "effectiveDate": "د پلي کېدو نېټه",
@@ -383,6 +399,25 @@
     "whatsapp": "واټس‌اپ",
     "working_hours": "د کار ساعتونه",
     "working_hours_value": "۸:۰۰ - ۱۸:۰۰"
+  },
+  "dashboard": {
+    "comments": {
+      "title": "د نظرونو مدیریت",
+      "subtitle": "د بلاګ نظرونه وڅارئ او اداره یې کړئ",
+      "count": "{{count}} نظر(ونه)",
+      "updated": "نظر تازه شو.",
+      "update_failed": "نظر تازه نه شو.",
+      "deleted": "نظر ړنګ شو.",
+      "delete_failed": "د نظر ړنګول پاتې شو.",
+      "approve_failed": "د نظر د تاییدولو هڅه پاتې شوه.",
+      "approved": "نظر تایید شو.",
+      "delete_title": "دا نظر ړنګ شي؟",
+      "delete_body": "دا کار به نظر تل لپاره له بلاګ څخه لرې کړي.",
+      "empty": "تر اوسه کوم نظر نشته.",
+      "pending": "په انتظار کې",
+      "blog": "بلاګ",
+      "approve": "تایید"
+    }
   },
   "footer": {
     "rights": "© 2026 د ریحانه پخلنځي وسایل. ټول حقونه خوندي دي."
